# cs2autoexec

./: Cargo.toml  README.md  index.html  style.css
.github/workflows/: continuous_deployment.yml  deploy.yml
defaults/: cs2_user_convars_0_slot0.vcfg  user_keys_default.vcfg
src/: lib.rs  main.rs  special_binds.rs
