[package]
name = "cs2-autoexec"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.11"
tokio = "^1.38.2"
web-sys = "0.3.64"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

# Para aplicação Yew, você pode usar apenas bin ou adicionar lib para WASM
[[bin]]
name = "cs2-autoexec"
path = "src/main.rs"

# Adicionar se quiser exportar funções WASM
[lib]
name = "cs2_autoexec_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]  # Apenas se precisar exportar para JS

# Otimizações para release
[profile.release]
lto = true
opt-level = "s"  # Otimizar para tamanho
codegen-units = 1

[profile.dev]
opt-level = 0  # Compilação mais rápida para desenvolvimento